--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,9 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Test Foods"
 include ':app'
+include ':feature-main'
+include ':feature-cart'
+include ':feature-category'
+include ':feature-product'
+include ':feature-search'
+include ':feature-account'
