--- a/settings.gradle
+++ b/settings.gradle
@@ -14,9 +14,14 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Test Foods"
 include ':app'
-include ':feature-main'
-include ':feature-cart'
-include ':feature-category'
-include ':feature-product'
-include ':feature-search'
-include ':feature-account'
+include ':network'
+include ':feature'
+include ':feature:account'
+include ':feature:cart'
+include ':feature:search'
+include ':feature:category'
+include ':feature:main'
+include ':feature:product'
+include ':data'
+include ':data:categories'
+include ':data:dishes'
