categories delegate adapter & not completed city fetching & main fragment with viewmodel

--- a/settings.gradle
+++ b/settings.gradle
@@ -19,7 +19,7 @@ include ':feature'
 include ':feature:account'
 include ':feature:cart'
 include ':feature:search'
-include ':feature:category'
+include ':feature:dishes'
 include ':feature:main'
 include ':feature:product'
 include ':data'
