--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 dependencies {
     implementation project(path: ':feature:main')
     implementation project(path: ':feature:cart')
-    implementation project(path: ':feature:category')
+    implementation project(path: ':feature:dishes')
     implementation project(path: ':feature:product')
     implementation project(path: ':feature:account')
     implementation project(path: ':feature:search')
@@ -48,6 +48,7 @@ dependencies {
     implementation project(path: ':data:dishes')
 
     implementation "io.insert-koin:koin-android:3.4.0"
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
