ProductFragment & database & CartFragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     implementation project(path: ':network')
     implementation project(path: ':data:categories')
     implementation project(path: ':data:dishes')
+    implementation project(path: ':data:cart_dishes')
+    implementation project(path: ':database')
+    implementation project(path: ':entity')
+
 
     implementation "io.insert-koin:koin-android:3.4.0"
 
