--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,6 @@ include ':feature:main'
 include ':data'
 include ':data:categories'
 include ':data:dishes'
+include ':entity'
+include ':database'
+include ':data:cart_dishes'
