--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,24 +46,28 @@ dependencies {
     implementation project(path: ':data:categories')
     implementation project(path: ':data:dishes')
     implementation project(path: ':data:cart_dishes')
-    implementation project(path: ':database')
     implementation project(path: ':entity')
-
 
     implementation "io.insert-koin:koin-android:3.4.0"
 
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
-    implementation 'androidx.activity:activity:1.7.2'
-    implementation "androidx.activity:activity-ktx:1.7.2"
+//    implementation 'androidx.appcompat:appcompat:1.3.0'
+//    implementation 'androidx.activity:activity:1.7.2'
+////    implementation "androidx.activity:activity-ktx:1.7.2"
+//    implementation "androidx.fragment:fragment:1.6.0"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+
+    api 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    api 'androidx.navigation:navigation-ui-ktx:2.5.3'
+//    api "androidx.navigation:navigation-dynamic-features-fragment:2.5.3"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
