--- a/data/cart_dishes/build.gradle
+++ b/data/cart_dishes/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':database')
+    implementation project(path: ":entity")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
