--- a/data/cart_dishes/build.gradle
+++ b/data/cart_dishes/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     implementation project(path: ":entity")
+    implementation project(path: ":database_entities")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
