--- a/feature/cart/build.gradle
+++ b/feature/cart/build.gradle
@@ -35,7 +35,9 @@ android {
 
 dependencies {
     implementation project(path: ':entity')
+    implementation project(path: ':domain:cart_dishes_use_case')
     implementation project(path: ':data:cart_dishes')
+    implementation project(path: ':database_entities')
 
     implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:4.3.2'
 
