--- a/feature/dishes/build.gradle
+++ b/feature/dishes/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation project(path: ':network')
     implementation project(path: ':entity')
     implementation project(path: ':data:cart_dishes')
+    implementation project(path: ':domain:dishes_use_case')
+    implementation project(path: ':database_entities')
 
     implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:4.3.2'
 
