--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,8 @@ include ':data:categories'
 include ':data:dishes'
 include ':entity'
 include ':data:cart_dishes'
+include ':domain'
+include ':domain:cart_dishes_use_case'
+include ':domain:categories_use_case'
+include ':domain:dishes_use_case'
+include ':database_entities'
