--- a/settings.gradle
+++ b/settings.gradle
@@ -30,4 +30,5 @@ include ':domain'
 include ':domain:cart_dishes_use_case'
 include ':domain:categories_use_case'
 include ':domain:dishes_use_case'
-include ':database_entities'
+include ':database'
+include ':domain:repositories'
