--- a/data/categories/build.gradle
+++ b/data/categories/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     implementation project(path: ':network')
+    implementation project(path: ':domain:repositories')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
